hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_const_external_symbol@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@sym2 = external global { i1, i64, i2 }
@sym1 = external constant i64

define internal { i64, { i1, i64, i2 } } @_hl.main.1() !dbg !3 {
alloca_block:
  %"0" = alloca i64, align 8
  %"1" = alloca { i1, i64, i2 }, align 8
  %"7_0" = alloca { i1, i64, i2 }, align 8
  %"5_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %sym2 = load { i1, i64, i2 }, ptr @sym2, align 4
  store { i1, i64, i2 } %sym2, ptr %"7_0", align 4
  %sym1 = load i64, ptr @sym1, align 4
  store i64 %sym1, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load { i1, i64, i2 }, ptr %"7_0", align 4
  store i64 %"5_01", ptr %"0", align 4
  store { i1, i64, i2 } %"7_02", ptr %"1", align 4
  %"03" = load i64, ptr %"0", align 4
  %"14" = load { i1, i64, i2 }, ptr %"1", align 4
  %mrv = insertvalue { i64, { i1, i64, i2 } } poison, i64 %"03", 0
  %mrv5 = insertvalue { i64, { i1, i64, i2 } } %mrv, { i1, i64, i2 } %"14", 1
  ret { i64, { i1, i64, i2 } } %mrv5
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/pIlPNzlVLClAphFGIyrhvZsHeD/UnyeIVwAutKJHaZEPSZw/XPeycUvnuj/xZKP/CTcNfsTEGLo")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i64, { i1, i64, i2 } }", file: !2, size: 16, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, i64, i2 }", file: !2, size: 8, align: 8, elements: !11)
!11 = !{!12, !9, !13}
!12 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!13 = !DIBasicType(name: "i2", size: 2, encoding: DW_ATE_unsigned)
